# handover-xapp

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build_container_image.sh  xapp-frame-cpp.patch
ASN1c/e2ap/: CMakeLists.txt
ASN1c/e2sm/: CMakeLists.txt  RANParameter-STRUCTURE.h
helm/handover-xapp/: values.yaml
init/: E2nodeUEInstance.json  xapp-descriptor.json
src/: CMakeLists.txt  main.cpp
src/a1/: CMakeLists.txt  a1mgr.cpp  a1mgr.hpp
src/e2/: CMakeLists.txt  control.cpp  control.hpp  e2mgr.cpp  e2mgr.hpp  utils.cpp  utils.hpp
